[package]
name = "rust_os"
version = "0.1.0"
authors = ["Hamish Cox <hamishwhc@gmail.com>"]

[dependencies]
volatile = "0.2.6"
rlibc = "1.0.0"
bootloader = "0.9.8"
spin = "0.5.2"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

# the profile used for `cargo build`
[profile.dev]
panic = "abort" # disable stack unwinding on panic

# the profile used for `cargo build --release`
[profile.release]
panic = "abort" # disable stack unwinding on panic